metadata/objects/GRAX_Data_Record__c.object
<CustomObject>
    <description>This object is related to the GRAX Schedule Process Object. These records contain the object and relationship to the Salesforce record(s) which will be backed up/archived from Salesforce.</description>
    <fields>
        <fullName>Can_Delete_GRAX_Record__c</fullName>
        <formula>Records_To_Process__c = 0 &amp;&amp;
(
  GRAX_Schedule_Process__c = null || 
  ( 
    NOT(ISPICKVAL(GRAX_Schedule_Process__r.type__c, &apos;Hierarchy&apos;)) ||
    NOT(GRAX_Schedule_Process__r.Progressive__c)
  ) &amp;&amp;
  (
    (
      NOT(GRAX_Schedule_Process__r.Is_Running__c) &amp;&amp;
      DATEVALUE(CreatedDate) &lt; TODAY() - 15
    ) ||
    (
      GRAX_Schedule_Process__r.Execution_Unique_Key__c != Execution_Unique_Key__c &amp;&amp;
      NOT(GRAX_Schedule_Process__r.Is_Running__c)
    ) ||
    (
      Records_Failed_to_Delete__c = 0 &amp;&amp;
      GRAX_Schedule_Process__r.Can_Delete_GRAX_Records__c &amp;&amp;
      (
        ISPICKVAL(Status__c, &apos;Sent Successful&apos;) ||
        (
          ISPICKVAL(Status__c, &apos;Not Sent&apos;) &amp;&amp;
          NOT(GRAX_Schedule_Process__r.Is_Running__c)
        )
      ) &amp;&amp; 
      (
         ISBLANK(GRAX_Archive_Process__c) || 
         GRAX_Archive_Process__r.Can_Delete_GRAX_Record__c
      )
    )
  )
)</formula>
        <label>Can Delete GRAX Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error_Message</description>
        <inlineHelpText>Description of the Error message received</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Unique_Key__c</fullName>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Archive_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GRAX Archive Process</label>
        <referenceTo>GRAX_Archive_Process__c</referenceTo>
        <relationshipLabel>GRAX Data Records</relationshipLabel>
        <relationshipName>GRAX_Data_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRAX_Schedule_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GRAX_Schedule_Process</description>
        <label>GRAX Schedule Process</label>
        <referenceTo>GRAX_Schedule_Process__c</referenceTo>
        <relationshipLabel>GRAX Data Records</relationshipLabel>
        <relationshipName>GRAX_Data_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Sent_Date__c</fullName>
        <description>Last_Sent_Date</description>
        <label>Last Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Overall_SFObject_Process_End_Time__c</fullName>
        <description>Overall SFObject Process End Time</description>
        <label>Overall SFObject Process End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Overall_SFObject_Process_Start_Time__c</fullName>
        <description>Overall SFObject Process Start Time</description>
        <label>Overall SFObject Process Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Object_Index__c</fullName>
        <label>Process Object Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Failed_to_Delete__c</fullName>
        <label># Records Failed to Delete</label>
        <summaryFilterItems>
            <field>GRAX_Data_Record_Id__c.Status__c</field>
            <operation>equals</operation>
            <value>Delete Error</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GRAX_Data_Record_Id__c.of_Attempts_to_Delete__c</field>
            <operation>greaterOrEqual</operation>
            <value>5</value>
        </summaryFilterItems>
        <summaryForeignKey>GRAX_Data_Record_Id__c.GRAX_Data_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Records_Sent_to_GRAX__c</fullName>
        <label># Records Sent to GRAX</label>
        <summaryFilterItems>
            <field>GRAX_Data_Record_Id__c.Status__c</field>
            <operation>equals</operation>
            <value>Sent to GRAX</value>
        </summaryFilterItems>
        <summaryForeignKey>GRAX_Data_Record_Id__c.GRAX_Data_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Records_Successfully_Deleted__c</fullName>
        <label># Records Successfully Deleted</label>
        <summaryFilterItems>
            <field>GRAX_Data_Record_Id__c.Status__c</field>
            <operation>equals</operation>
            <value>Deleted with Master Parent, Successfully Deleted</value>
        </summaryFilterItems>
        <summaryForeignKey>GRAX_Data_Record_Id__c.GRAX_Data_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Records_To_Process__c</fullName>
        <label># Records To Process</label>
        <summaryForeignKey>GRAX_Data_Record_Id__c.GRAX_Data_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <description>Salesforce_ID</description>
        <inlineHelpText>List of ID&apos;s for all Salesforce records to be sent to Data Lake</inlineHelpText>
        <label>Salesforce ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object__c</fullName>
        <description>Salesforce_Object</description>
        <inlineHelpText>Name of Salesforce object which is being backed up</inlineHelpText>
        <label>Salesforce Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sched_Proc_Hierarchy_Unique_Key__c</fullName>
        <description>Sched_Proc_Hierarchy_Unique_Key</description>
        <label>Sched Proc Hierarchy Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Sent Successful</fullName>
                </value>
                <value>
                    <fullName>Not Processed - Queuable Jobs Full</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Times_Sent__c</fullName>
        <description>of_Times_Sent</description>
        <label># of Times Sent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GRAX Data Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Salesforce_Object__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Last_Sent_Date__c</columns>
        <columns>Records_To_Process__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GRAX-{0000000}</displayFormat>
        <label>GRAX Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Data Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>